8168138: Fix failing testcases in javapackager test suite and other modifications mentioned in description
Reviewed-by: cbensen